--- a/bower.json
+++ b/bower.json
@@ -26,7 +26,7 @@
     "tests"
   ],
   "dependencies": {
-    "intl-tel-input": "~6.4.1"
+    "intl-tel-input": "https://github.com/richardsawyer/intl-tel-input.git"
   },
   "devDependencies": {
     "angularjs": "1.4.3",
